# auto-resume-submission

./: .env  Cargo.toml  zp城市模板.txt  zp打招呼模板.txt
src/: chat.rs  cmd.rs  common.rs  main.rs
src/config/: env.rs  logger.rs  mod.rs
src/recruitment_platform/: mod.rs
src/recruitment_platform/boss_zhipin/: mod.rs  services.rs  types.rs
src/recruitment_platform/liepin/: common.rs  mod.rs  services.rs  types.rs
