[package]
name = "auto-resume-submission"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.16.0"
futures = { version = "0.3.24" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio-tungstenite = { version = "^0.20.0", features = ["native-tls"] }
rand = "0.8.4"
base64 = "0.21.0"
hex = "0.4"
paho-mqtt = { version = "0.12" }
e-utils = { version = "0.1.20" }
urlencoding = "2.1.3"
[target.'cfg(target_os="windows")'.dependencies]
dotenv = "0.15.0"
